--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/animate.css">
     <link rel="stylesheet" href="styles/style.css">
     <!-- endbuild -->
   </head>
@@ -115,7 +116,7 @@
     </div>
     
 
-    <div ui-view></div>
+    <div ui-view class="lado" ></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
      <script>
