--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       <div class="row white-text">
         <div class="col s12">
           <div id="logo">
-            <img src="./images/Nlogo2.svg">
+            <img src="./images/Nlogo.svg">
             <div class="bno">banighton</div>
           </div>
           <div ng-show="!mobile" class="tactil">
@@ -73,7 +73,7 @@
 
           <div ng-show="btn" id="btnIngresar">
             <a ng-show="!currentUser" class="btn-floating btn-large waves-effect waves-light black" ng-click="abrirModal('ingresar')">
-              <i class="right ion-log-in blue-text"></i>
+              <i class="right ion-log-in texto-principal"></i>
             </a>
             <a ng-show="currentUser" class="btn-floating btn-large waves-effect waves-light black" ng-click="clientLogout()">
               <i class="right ion-log-out blue-text"></i>
