--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       <div class="row white-text">
         <div class="col s12">
           <div id="logo">
-            <img src="./images/Nlogo.svg">
+            <img src="./images/bnopin.svg">
             <div class="bno">banighton</div>
           </div>
           <div ng-show="!mobile" class="tactil">
