--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       <div class="row white-text">
         <div class="col s12">
           <div id="logo">
-            <img src="./images/bnopin.svg">
+            <img src="./images/logo.png">
             <div class="bno">banighton</div>
           </div>
           <div ng-show="!mobile" class="tactil">
@@ -76,7 +76,7 @@
               <i class="right ion-log-in texto-principal"></i>
             </a>
             <a ng-show="currentUser" class="btn-floating btn-large waves-effect waves-light black" ng-click="clientLogout()">
-              <i class="right ion-log-out blue-text"></i>
+              <i class="right ion-log-out texto-principal"></i>
             </a>
           </div>
           
