--- a/app/index.html
+++ b/app/index.html
@@ -226,6 +226,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/ng-file-model/ng-file-model.js"></script>
+    <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
